<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleurArrierePlan"
    android:orientation="vertical">
    <!-- LINT : on en a parlé et vous aviez dit que c'était OK puisque je changer
     le backgroundWindow dans mon style changeait aussi la couleur de background de mon
      menu avec les noms.  VOIR style.xml-->

    <TextView
        android:id="@+id/txt_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:textColor="@color/couleurTexte"
        tools:text="@string/valeur_test" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tour"
        android:layout_width="76dp"
        android:layout_height="156dp"
        android:background="@color/couleurCaseBlanche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tour" />

    <GridLayout
        android:id="@+id/layout_jeu"
        android:layout_width="393dp"
        android:layout_height="390dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:columnCount="10"
        android:rowCount="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_tour"
        tools:context=".JeuFragment">


    </GridLayout>

    <Button
        android:id="@+id/bouton_precedant"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:background="@color/couleurCaseBlanche"
        android:text="@string/bouton_precedant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_jeu"
        app:layout_constraintVertical_bias="0.385" />

    <Button
        android:id="@+id/bouton_recommencer"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:text="@string/bouton_recommencer"
        android:background="@color/couleurCaseBlanche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>